# product

./: .gitignore  datapulls.py  db.py  main.py  mmm.py  notes.md  pyproject.toml  svg_icons.py  tailwind.config.js  tmp_db.py
components/: charts.py  misc.py  options.py  relationships.py  svg.py
docs/: api-endpoints.md
static/css/: input.css  output.css
static/js/: chart-color.js  collapse.js  oklch-rgb.js
