[project]
name = "mmm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arviz>=0.21.0",
    "dill>=0.4.0",
    "jax>=0.6.2",
    "numpy>=2.3.0",
    "numpyro>=0.18.0",
    "pyecharts>=2.0.7",
    "pymc-marketing>=0.11.1",
    "python-fasthtml>=0.12.20",
    "ruff>=0.11.8",
    "tqdm>=4.67.1",
]

[tool.uv.workspace]
members = ["misc/caus"]
